--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ dependencies {
     compile 'com.android.support:design:26.0.0-alpha1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:customtabs:26.0.0-alpha1'
-    compile 'com.facebook.android:facebook-android-sdk:4.24.0'
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
     compile 'com.google.code.gson:gson:2.8.1'
     compile 'com.github.joaquimley:faboptions:1.1.2'
