--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.1"
+    compileSdkVersion 27
+    buildToolsVersion '27.0.0'
     defaultConfig {
         applicationId "com.sharonalexander.trollmonkey"
         minSdkVersion 16
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -17,6 +17,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+    }
 }
 
 dependencies {
@@ -24,28 +26,28 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:design:26.0.0-alpha1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:customtabs:26.0.0-alpha1'
+    compile 'com.android.support:customtabs:27.0.0'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
-    compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
     compile 'com.google.code.gson:gson:2.8.1'
     compile 'com.github.joaquimley:faboptions:1.1.2'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'pub.devrel:easypermissions:0.4.3'
     compile 'com.linsea:universalvideoview:1.1.0@aar'
     compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
-    compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
-    compile 'com.android.support:support-v4:26.0.0-alpha1'
-    compile 'com.android.support:support-vector-drawable:26.0.0-alpha1'
+    compile 'com.android.support:recyclerview-v7:27.0.0'
+    compile 'com.android.support:support-v4:27.0.0'
+    compile 'com.android.support:support-vector-drawable:27.0.0'
     compile('com.mikepenz:materialdrawer:5.9.5@aar') {
         transitive = true
     }
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:cardview-v7:26.0.0-alpha1'
+    compile 'com.android.support:cardview-v7:27.0.0'
     compile 'com.google.firebase:firebase-core:11.4.0'
     compile 'com.google.firebase:firebase-crash:11.4.0'
     compile 'com.google.firebase:firebase-ads:11.4.0'
+    implementation 'com.android.support:design:27.0.0'
+    implementation 'com.android.support:appcompat-v7:27.0.0'
 }
 repositories {
     jcenter()
